[package]
name = "sqlxmq-executor"
description = "Helper for executing jobs spawned by https://github.com/Diggsey/sqlxmq"
repository = "https://github.com/GaloyMoney/sqlxmq-executor"
version = "0.1.0-dev"
edition = "2021"
license = "MIT"
categories = ["job"]

[dependencies]
derive_builder = "0.12"
opentelemetry = "0.18"
serde = "1.0"
serde_json = "1.0"
serde_with = "2.2"
sqlx = { version = "0.6", features = ["postgres"] }
sqlxmq = { version = "0.4", default-features = false, features = [ "runtime-tokio-rustls" ] }
tracing = "0.1"
tracing-opentelemetry = "0.18"
